--- a/index.html
+++ b/index.html
@@ -1,8 +1,76 @@
-<html>
-  <body>
-    <h1>Get around Herald Leader Paywall</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>No Herald Leader Paywall</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="blake hall">
 
-    <a
+    <!-- Le styles -->
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 20px;
+        padding-bottom: 40px;
+      }
+
+      /* Custom container */
+      .container-narrow {
+        margin: 0 auto;
+        max-width: 700px;
+      }
+      .container-narrow > hr {
+        margin: 30px 0;
+      }
+
+      /* Main marketing message and sign up button */
+      .jumbotron {
+        margin: 60px 0;
+        text-align: center;
+      }
+      .jumbotron h1 {
+        font-size: 72px;
+        line-height: 1;
+      }
+      .jumbotron .btn {
+        font-size: 21px;
+        padding: 14px 24px;
+      }
+
+      /* Supporting marketing content */
+      .marketing {
+        margin: 60px 0;
+      }
+      .marketing p + h4 {
+        margin-top: 28px;
+      }
+    </style>
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="container-narrow">
+
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li><a href="https://github.com/blakeshall/hl-">Github</a></li>
+        </ul>
+        <h3 class="muted">HL-</h3>
+      </div>
+
+      <hr>
+
+      <div class="jumbotron">
+        <h1>No Herald Leader Paywall</h1>
+        <p class="lead">I really don't like paywalls. So I hacked together this handy little bookmarklet to get around the Herald Leader's paywall. Just drag it to your bookmarks bar and click it whenever you get hit with the paywall while looking at an article.</p>
+        <a class="btn btn-info"
       href="javascript:(function(){document.getElementById('gregbox-outer').style.display
       = 'none';document.getElementById('gregbox-signInTab').style.display =
       'none';document.getElementsByTagName('img')[document.getElementsByTagName('img').length
@@ -11,5 +79,31 @@
       - 2].style.display =
       'none';document.getElementsByTagName('div')[document.getElementsByTagName('div').length
       - 1].style.display = 'none';})();">No Paywall</a>
+      </div>
+
+      <hr>
+
+      <div class="footer">
+        <p>Made by <a href="http://www.blakeshall.com">Blake Hall</a></p>
+      </div>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="bootstrap/js/bootstrap-transition.js"></script>
+    <script src="bootstrap/js/bootstrap-alert.js"></script>
+    <script src="bootstrap/js/bootstrap-modal.js"></script>
+    <script src="bootstrap/js/bootstrap-dropdown.js"></script>
+    <script src="bootstrap/js/bootstrap-scrollspy.js"></script>
+    <script src="bootstrap/js/bootstrap-tab.js"></script>
+    <script src="bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="bootstrap/js/bootstrap-popover.js"></script>
+    <script src="bootstrap/js/bootstrap-button.js"></script>
+    <script src="bootstrap/js/bootstrap-collapse.js"></script>
+    <script src="bootstrap/js/bootstrap-carousel.js"></script>
+    <script src="bootstrap/js/bootstrap-typeahead.js"></script>
+
   </body>
 </html>
