--- a/index.html
+++ b/index.html
@@ -71,14 +71,9 @@
         <h1>No Herald Leader Paywall</h1>
         <p class="lead">I really don't like paywalls. So I hacked together this handy little bookmarklet to get around the Herald Leader's paywall. Just drag it to your bookmarks bar and click it whenever you get hit with the paywall while looking at an article.</p>
         <a class="btn btn-info"
-      href="javascript:(function(){document.getElementById('gregbox-outer').style.display
-      = 'none';document.getElementById('gregbox-signInTab').style.display =
-      'none';document.getElementsByTagName('img')[document.getElementsByTagName('img').length
-      - 1].style.display =
-      'none';document.getElementsByTagName('div')[document.getElementsByTagName('div').length
-      - 2].style.display =
-      'none';document.getElementsByTagName('div')[document.getElementsByTagName('div').length
-      - 1].style.display = 'none';})();">No Paywall</a>
+      href="javascript:(function(){document.getElementById('pressplusOverlay').style.display
+      = 'none';document.getElementById('ppUI').style.display = 'none';
+      ">No Paywall</a>
       </div>
 
       <hr>
